# feedragon

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  sample.json
.github/workflows/: push.yml
src/: atom.rs  atom_parser.rs  atom_serialization.rs  cache.rs  caching_http_client.rs  category.rs  config.rs  example_atom_entry.xml  example_one_element_atom_feed.xml  example_one_element_rss_feed.xml  example_rss_entry.xml  feed_provider.rs  feed_transformer.rs  http_client.rs  main.rs  model.rs  parsing.rs  rss_parser.rs  rss_serialization.rs  serialization.rs  server.rs  xml_tree.rs
src/feed/: atom.rs  atom_serialization.rs  fallback_serialization.rs  mod.rs  model.rs  rss_serialization.rs  serialization.rs
src/res/: example_empty_atom_feed.xml  example_empty_rss_feed.xml  example_one_element_twitchrss_feed.xml
src/res/static/: HardDriveMag.xml  feed1.xml  invidious.xml  tietuesday.xml
src/res/static/pages/: libreddit_external_image.html  libreddit_single_image.html  libreddit_two_images.html  nitter_no_image.html  nitter_single_image.html  nitter_two_images.html
