[package]
name = "feedragon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmltree = "0.10.3"
url = "2.2.2"
chrono = "0.4.19"
actix-web = "4.0.0"
serde = "1.0.136"
serde_derive = "1.0.136"
reqwest = "0.11.10"