[package]
name = "feedragon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
chrono = "0.4.19"
actix-web = "4.0.0"
serde = "1.0.136"
serde_derive = "1.0.136"
reqwest = "0.11.10"
derive_more = "0.99.17"
anyhow = "1.0.56"
bytes = "1.1.0"
tempfile = "3.3.0"
md-5 = "0.10.1"
hex = "0.4.3"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
derive-alias = "0.1.0"
env_logger = "0.9.0"
log = "0.4.16"